// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`can create document 1`] = `
{
  "projects": {
    "mealmatesnetwork-dev0": {
      "databases": {
        "(default)": {
          "collections": {
            "test": {
              "documents": {
                "test": {
                  "collections": {},
                  "fields": {
                    "foo": "bar",
                  },
                  "path": "projects/mealmatesnetwork-dev0/databases/(default)/test/test",
                },
              },
              "path": "projects/mealmatesnetwork-dev0/databases/(default)/test",
            },
          },
          "path": "projects/mealmatesnetwork-dev0/databases/(default)",
        },
      },
      "path": "projects/mealmatesnetwork-dev0",
    },
  },
}
`;

exports[`can delete document 1`] = `
{
  "projects": {
    "mealmatesnetwork-dev0": {
      "databases": {
        "(default)": {
          "collections": {
            "test": {
              "documents": {
                "test": {
                  "collections": {},
                  "fields": {},
                  "path": "projects/mealmatesnetwork-dev0/databases/(default)/test/test",
                },
              },
              "path": "projects/mealmatesnetwork-dev0/databases/(default)/test",
            },
          },
          "path": "projects/mealmatesnetwork-dev0/databases/(default)",
        },
      },
      "path": "projects/mealmatesnetwork-dev0",
    },
  },
}
`;

exports[`can get document 1`] = `
{
  "projects": {
    "mealmatesnetwork-dev0": {
      "databases": {
        "(default)": {
          "collections": {
            "test": {
              "documents": {
                "test": {
                  "collections": {},
                  "fields": {},
                  "path": "projects/mealmatesnetwork-dev0/databases/(default)/test/test",
                },
              },
              "path": "projects/mealmatesnetwork-dev0/databases/(default)/test",
            },
          },
          "path": "projects/mealmatesnetwork-dev0/databases/(default)",
        },
      },
      "path": "projects/mealmatesnetwork-dev0",
    },
  },
}
`;

exports[`can list documents 1`] = `
{
  "projects": {
    "mealmatesnetwork-dev0": {
      "databases": {
        "(default)": {
          "collections": {
            "test": {
              "documents": {
                "test": {
                  "collections": {},
                  "fields": {
                    "foo": "bar1",
                  },
                  "path": "projects/mealmatesnetwork-dev0/databases/(default)/test/test",
                },
                "test2": {
                  "collections": {},
                  "fields": {
                    "foo": "bar2",
                  },
                  "path": "projects/mealmatesnetwork-dev0/databases/(default)/test/test2",
                },
                "test3": {
                  "collections": {},
                  "fields": {
                    "foo": "bar3",
                  },
                  "path": "projects/mealmatesnetwork-dev0/databases/(default)/test/test3",
                },
              },
              "path": "projects/mealmatesnetwork-dev0/databases/(default)/test",
            },
          },
          "path": "projects/mealmatesnetwork-dev0/databases/(default)",
        },
      },
      "path": "projects/mealmatesnetwork-dev0",
    },
  },
}
`;

exports[`can list documents with where 1`] = `
{
  "projects": {
    "mealmatesnetwork-dev0": {
      "databases": {
        "(default)": {
          "collections": {
            "test": {
              "documents": {
                "test": {
                  "collections": {},
                  "fields": {
                    "foo": "bar1",
                  },
                  "path": "projects/mealmatesnetwork-dev0/databases/(default)/test/test",
                },
                "test2": {
                  "collections": {},
                  "fields": {
                    "foo": "bar2",
                  },
                  "path": "projects/mealmatesnetwork-dev0/databases/(default)/test/test2",
                },
                "test3": {
                  "collections": {},
                  "fields": {
                    "foo": "bar3",
                  },
                  "path": "projects/mealmatesnetwork-dev0/databases/(default)/test/test3",
                },
              },
              "path": "projects/mealmatesnetwork-dev0/databases/(default)/test",
            },
          },
          "path": "projects/mealmatesnetwork-dev0/databases/(default)",
        },
      },
      "path": "projects/mealmatesnetwork-dev0",
    },
  },
}
`;

exports[`can set document 1`] = `
{
  "projects": {
    "mealmatesnetwork-dev0": {
      "databases": {
        "(default)": {
          "collections": {
            "test": {
              "documents": {
                "test": {
                  "collections": {},
                  "fields": {
                    "foo": "bar",
                  },
                  "path": "projects/mealmatesnetwork-dev0/databases/(default)/test/test",
                },
              },
              "path": "projects/mealmatesnetwork-dev0/databases/(default)/test",
            },
          },
          "path": "projects/mealmatesnetwork-dev0/databases/(default)",
        },
      },
      "path": "projects/mealmatesnetwork-dev0",
    },
  },
}
`;

exports[`can set document with merge 1`] = `
{
  "projects": {
    "mealmatesnetwork-dev0": {
      "databases": {
        "(default)": {
          "collections": {
            "test": {
              "documents": {
                "test": {
                  "collections": {},
                  "fields": {
                    "bar": "baz",
                    "foo": "bar",
                  },
                  "path": "projects/mealmatesnetwork-dev0/databases/(default)/test/test",
                },
              },
              "path": "projects/mealmatesnetwork-dev0/databases/(default)/test",
            },
          },
          "path": "projects/mealmatesnetwork-dev0/databases/(default)",
        },
      },
      "path": "projects/mealmatesnetwork-dev0",
    },
  },
}
`;

exports[`can update document 1`] = `
{
  "projects": {
    "mealmatesnetwork-dev0": {
      "databases": {
        "(default)": {
          "collections": {
            "test": {
              "documents": {
                "test": {
                  "collections": {},
                  "fields": {
                    "foo": "baz",
                  },
                  "path": "projects/mealmatesnetwork-dev0/databases/(default)/test/test",
                },
              },
              "path": "projects/mealmatesnetwork-dev0/databases/(default)/test",
            },
          },
          "path": "projects/mealmatesnetwork-dev0/databases/(default)",
        },
      },
      "path": "projects/mealmatesnetwork-dev0",
    },
  },
}
`;

exports[`get document after create 1`] = `
{
  "projects": {
    "mealmatesnetwork-dev0": {
      "databases": {
        "(default)": {
          "collections": {
            "test": {
              "documents": {
                "test": {
                  "collections": {},
                  "fields": {
                    "foo": "bar",
                  },
                  "path": "projects/mealmatesnetwork-dev0/databases/(default)/test/test",
                },
              },
              "path": "projects/mealmatesnetwork-dev0/databases/(default)/test",
            },
          },
          "path": "projects/mealmatesnetwork-dev0/databases/(default)",
        },
      },
      "path": "projects/mealmatesnetwork-dev0",
    },
  },
}
`;
